2024-06-12 Se sube avance de SCDM (validación de formularios).

--- a/CódigoFuente/BitacorasProduccion/Content/css/HansontableHeaderColors.css
+++ b/CódigoFuente/BitacorasProduccion/Content/css/HansontableHeaderColors.css
@@ -39,3 +39,8 @@
     background: #feae31;
     color: black;
 }
+
+.handsontable THEAD TH.HTDarkGray {
+    background: #969696;
+    color: white;
+}
