--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioEstatus.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioEstatus.cshtml
@@ -176,7 +176,7 @@
             }
 
         .fondo-pendiente {
-            background-color: #009ff5;
+            background-color: #8b8b8b;
         }
 
         .fondo-completado {
@@ -270,21 +270,42 @@
                                 </dl>
                             </div>
                         </div>
+
+                        <div class="col-sm-12">
+
+                            <div class="wf-accordion-group js-accordion-group">                               
+                                   
+                                    <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                        <div class="wf-accordion__header js-accordion__header">
+                                            <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-pendiente" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Información de estatus</button></h3>
+                                        </div>
+                                        <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                            <!--Contenido-->
+                                            <div class="col-sm-12">
+                                                <div class="col-md-5    col-sm-5">
+                                                    <div id="estatus_combinaciones_hot" class="hot"></div>
+                                                </div>
+                                                <div class="col-md-4 col-sm-4 ">
+                                                    <div id="estatus_planta_hot" class="hot"></div>
+                                                </div>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    <div id="estatus_ventas_hot" class="hot"></div>
+                                                </div>
+
+                                            </div>
+                                            <span style="color:#FFFF">.</span>  <br />
+                                            <span style="color:#FFFF">.</span>
+
+                                        </div>
+                                    </div>
+                                
+                            </div>
+                        </div>                                     
+
                         <div class="col-sm-12">
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                                 <h4 style="color:#7c7c7c"><b>Elementos de la Solicitud</b></h4>
-                            </div>
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="alert alert-2-secondary">
-                                <p class="alert-content">
-                                    <i class="fa-solid fa-triangle-exclamation" style="color: #ff9924;"></i> Cambio de Estatus
-                                    <ul>
-                                        <li>Activaciones: P3 - D2.</li>
-                                        <li>Obsoletar: P0 - D0.</li>
-                                    </ul>
-                                </p>
                             </div>
                         </div>
 
@@ -380,7 +401,7 @@
         var si_noArray = ['SÍ', 'NO'];
         var salesOrgArray = ['5000'];
         var estatusPlantaArray = ['P1', 'P2', 'P3', 'P0'];
-        var dChainArray = ['D1', 'D2', 'D0'];
+        var dChainArray = ['D1', 'D2', 'DR' ,'D0'];
         var plantaArray = @Html.Raw(Json.Encode(plantaArray));
 
 
@@ -388,6 +409,7 @@
 
             //inicializa hansontable
             inicializaHandsontable();
+            inicializaTablasEstatus();
             DefineValidadores();
             cargaDatosIniciales();
 
@@ -397,7 +419,7 @@
             $.unblockUI();
         });
 
-
+        
         function inicializaHandsontable() {
             const container = document.querySelector('#example');
 
@@ -442,8 +464,8 @@
                     { readOnly: true }, //hidden
                     { //material
                         validator: function (value, callback) {
-                            let max = 8;
-                            if ((value == null || value == '') || (value != null && value.length > max)) {
+                            let max = 7;
+                            if ((value == null || value == '') || (value != null && value.length != max)) {
                                 toastMixin.fire({ title: 'El campo Material debe ser de ' + max + ' carácteres.', icon: 'warning' });
                                 callback(false);
                             } else {
@@ -482,7 +504,7 @@
                              if ((value == null || value == '') || !estatusPlantaArray.includes(value)) {
                                  callback(false);
                              }
-                             else {
+                             else {                      
                                  callback(true);
                              }
                          }
@@ -495,7 +517,22 @@
                                  callback(false);
                              }
                              else {
-                                 callback(true);
+                                 let estatusPlanta = hot.getDataAtCell(this.row, GetColFromName("Estatus - Planta"));
+                                 let combinacion = estatusPlanta + "-" + value;
+                                 console.log(combinacion);
+                                 switch (combinacion) {
+                                     case "P1-D1":
+                                     case "P2-D1":
+                                     case "P3-D2":
+                                     case "P0-DR":
+                                     case "P0-D0":
+                                         callback(true)
+                                         break;
+                                     default:
+                                         toastMixin.fire({ title: 'La combinación no es válida.', icon: 'warning' });
+                                         callback(false);
+                                         break;
+                                 }                                 
                              }
                          }
                      },
@@ -695,6 +732,137 @@
             var col = hot.countRows();
             hot.alter('insert_row_below', col, 1);
         }
+
+        function inicializaTablasEstatus() {
+
+            //inicializa tabla para info estatus de planta
+            const containerPlantaStatus = document.querySelector('#estatus_planta_hot');
+            const hotPlantaEstattus = new Handsontable(containerPlantaStatus, {
+                autoWrapRow: true,
+                nestedHeaders: [
+                    [{ label: 'Estatus de Planta', colspan: 2 }],
+                    ['Clave', 'Descripción']
+                ],
+                afterGetColHeader: function (col, TH) {
+                    var TR = TH.parentNode;
+                    var THEAD = TR.parentNode;
+                    var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
+
+                    function applyClass(elem, className) {
+                        if (!Handsontable.dom.hasClass(elem, className)) {
+                            Handsontable.dom.addClass(elem, className);
+                        }
+                    }
+
+                    if (col == -1) {
+                        applyClass(TH, 'HTDarkGray');
+                    } else if (headerLevel === -2) {
+                        applyClass(TH, 'HTblue');
+                    } else {
+                        applyClass(TH, 'HTDarkGray');
+                    }
+                },
+                data: [
+                    ['P1', 'Creacion MM'],
+                    ['P2', 'Creacion Objetos funcionales'],
+                    ['P3', 'Activo'],
+                    ['P0', 'Obsoletos'],
+                ],
+                height: 'auto',
+                width: 'auto',
+                colHeaders: true,
+                autoWrapRow: true,
+                readOnly: true,
+                autoWrapCol: true,
+                licenseKey: 'non-commercial-and-evaluation'
+            });
+
+            //inicializa tabla para info estatus de ventas
+            const containerVentaStatus = document.querySelector('#estatus_ventas_hot');
+            new Handsontable(containerVentaStatus, {
+                autoWrapRow: true,
+                nestedHeaders: [
+                    [{ label: 'Estatus de Ventas', colspan: 2 }],
+                    ['Clave', 'Descripción']
+                ],
+                afterGetColHeader: function (col, TH) {
+                    var TR = TH.parentNode;
+                    var THEAD = TR.parentNode;
+                    var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
+
+                    function applyClass(elem, className) {
+                        if (!Handsontable.dom.hasClass(elem, className)) {
+                            Handsontable.dom.addClass(elem, className);
+                        }
+                    }
+
+                    if (col == -1) {
+                        applyClass(TH, 'HTgray');
+                    } else if (headerLevel === -2) {
+                        applyClass(TH, 'HTblue');
+                    } else {
+                        applyClass(TH, 'HTDarkGray');
+                    }
+                },
+                data: [
+                    ['D1', 'Creacion MM/OF'],
+                    ['D2', 'Vendible'],
+                    ['DR', 'Agotar inventario'],
+                    ['D0', 'Obsoleto'],
+                ],
+                height: 'auto',
+                width: 'auto',
+                colHeaders: true,
+                autoWrapRow: true,
+                readOnly: true,
+                autoWrapCol: true,
+                licenseKey: 'non-commercial-and-evaluation'
+            });
+
+            //inicializa tabla para info estatus combinaciones
+            const containerCombinacionesStatus = document.querySelector('#estatus_combinaciones_hot');
+            new Handsontable(containerCombinacionesStatus, {
+                autoWrapRow: true,
+                nestedHeaders: [
+                    [{ label: 'Cambinaciones Posibles', colspan: 3 }],
+                    ['Estatus Planta', 'Estatus Venta', 'Descripción']
+                ],
+                afterGetColHeader: function (col, TH) {
+                    var TR = TH.parentNode;
+                    var THEAD = TR.parentNode;
+                    var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
+
+                    function applyClass(elem, className) {
+                        if (!Handsontable.dom.hasClass(elem, className)) {
+                            Handsontable.dom.addClass(elem, className);
+                        }
+                    }
+
+                    if (col == -1) {
+                        applyClass(TH, 'HTgray');
+                    } else if (headerLevel === -2) {
+                        applyClass(TH, 'HTblue');
+                    } else {
+                        applyClass(TH, 'HTDarkGray');
+                    }
+                },
+                data: [
+                    ['P1', 'D1', ''],
+                    ['P2', 'D1', ''],
+                    ['P3', 'D2', 'Activar'],
+                    ['P0', 'DR', ''],
+                    ['P0', 'D0', 'Obsoletar'],
+                ],
+                height: 'auto',
+                width: 'auto',
+                colHeaders: true,
+                autoWrapRow: true,
+                readOnly: true,
+                autoWrapCol: true,
+                licenseKey: 'non-commercial-and-evaluation'
+            });
+        }
+
 
         function GetColFromName(name) {
             var n_cols = headers.length;
